# cybersecurity-projects

log-analysis-tool/: .gitignore  LICENSE  README.md  config.json  log_analyzer.py
log-analysis-tool/logs/: alerts.txt  analyzed_log.txt  malformed_lines.txt  suspicious_report.csv
password-manager-tool/: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
password-manager-tool/data/: common_passwords.txt  hashed_passwords.txt
password-manager-tool/password_manager/: __init__.py  admin.py  audit.py  core.py  storage.py  utils.py
password-manager-tool/tests/: test_admin.py  test_audit_logging.py  test_common_passwords.py  test_password_manager.py
password-manager-tool/tests/logs/: audit.log.jsonl
