[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "password-manager"
version = "0.1.0"
description = "A simple command-line password manager with user/admin functionality."
authors = [
    { name="TJ Lasure" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
    "pwinput==1.0.3"
]

[tool.setuptools]
packages = ["password_manager"]  # explicitly list only your package folder
include-package-data = true

[tool.setuptools.package-data]
"password_manager" = ["*.txt", "*.jsonl"]
